[tool.poetry]
name = "ddmw"
version = "0.1.0"
description = ""
authors = ["PedroDnT <pedrotodescan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
yfinance = "^0.2.40"
notebook = "^7.2.1"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
openai = "^1.35.3"
scikit-learn = "^1.5.0"
supabase = "^2.5.1"
tenacity = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
